# weaver

./: .gitignore  Makefile  README.md  docker-compose.yml  install.sh  repomix-output.txt
backend/: .dockerignore  .env  .env.example  Dockerfile  Dockerfile.dev  Dockerfile.prod  nginx.conf  package-lock.json  package.json  tsconfig.json
backend/db/: init.sql
backend/src/: index.ts
backups/: weaver.sh
cli/: pyproject.toml  setup.sh  weaver.sh
cli/weaver/: collector.py  config.py
cli/weaver-bash/: install.sh  uninstall.sh
cli/weaver-node/: README.md
cli/weaver-node/weaver/: README.md  collected_code.txt  package.json  tsconfig.json
cli/weaver-node/weaver/src/: cli.ts  constants.ts  index.ts  types.ts
cli/weaver-python/: pyproject.toml
cli/weaver-python/weaver/: __init__.py  cli.py
cli/weaver-python/weaver/ui/: __init__.py  components.py  styles.py
cli/weaver-python/weaver/utils/: __init__.py  file_utils.py  http_utils.py  patterns.py
cli/weaver/ui/: progress.py
frontend/: .dockerignore  .env  Dockerfile  Dockerfile.dev  Dockerfile.prod  captain-definition  nginx.conf  nodemon.json  package-lock.json  package.json  tsconfig.json
frontend/public/: index.html  manifest.json
frontend/src/: App.tsx
frontend/src/components/: ConnectionStatus.tsx  CopyButton.tsx  EmptyState.tsx  ErrorMessage.tsx  Footer.tsx  Header.tsx  LoadingScreen.tsx  Message.tsx  MessageContent.tsx  MessageHeader.tsx  MessageList.tsx  SearchBar.tsx  SortButton.tsx
frontend/src/services/: ApiService.ts
frontend/src/types/: types.ts
frontend/src/utils/: formatters.tsx
(+3 files in other folders)
