[tool.poetry]
name = "weaver"
version = "0.1.0"
description = "A beautiful terminal app for collecting and transmitting code files"
authors = ["Spencer Jireh Cebrian <spencercebian123@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.9.0"
rich = "^13.7.0"
textual = "^0.44.1"
requests = "^2.31.0"
pydantic = "^2.5.2"

[tool.poetry.scripts]
weaver = "weaver.cli:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"